packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/Calendly_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendly_URL__c</fullName>
    <label>Calendly URL</label>
    <type>Url</type>
</CustomField>