packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/Career_Objective__c.field-meta.xml
<CustomField>
    <fullName>Career_Objective__c</fullName>
    <label>Career Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>