packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/GitHub_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Profile_URL__c</fullName>
    <label>GitHub Profile URL</label>
    <type>Url</type>
</CustomField>