packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>