packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/Personal_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Personal_Website_URL__c</fullName>
    <label>Personal Website URL</label>
    <type>Url</type>
</CustomField>