packages/portfolio-site/main/default/objects/Portfolio_Config__mdt/fields/Trailblazer_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile_URL__c</fullName>
    <label>Trailblazer Profile URL</label>
    <type>Url</type>
</CustomField>